fix shadows on mobile in certificates slider

--- a/src/scss/certificates.scss
+++ b/src/scss/certificates.scss
@@ -92,33 +92,37 @@
     &__slider-body {
         padding: 0 20px 32px !important;
         position: relative;
-        &::before {
-            content: '';
-            position: absolute;
-            z-index: 2;
-            background: $surfaceTertiary;
-            filter: blur(2px);
-            -webkit-filter: blur(2px);
-            top: -6px;
-            bottom: -6px;
-            width: 20px;
-            left: -5px;
-        }
-        &::after {
-            content: '';
-            position: absolute;
-            z-index: 2;
-            background: $surfaceTertiary;
-            filter: blur(2px);
-            -webkit-filter: blur(2px);
-            top: -6px;
-            bottom: -6px;
-            width: 20px;
-            right: -9px;
+
+        @media screen and (min-width: $breakpoint768) {
+            &::before {
+                content: '';
+                position: absolute;
+                z-index: 2;
+                background: $surfaceTertiary;
+                filter: blur(2px);
+                -webkit-filter: blur(2px);
+                top: -6px;
+                bottom: -6px;
+                width: 20px;
+                left: -5px;
+            }
+            &::after {
+                content: '';
+                position: absolute;
+                z-index: 2;
+                background: $surfaceTertiary;
+                filter: blur(2px);
+                -webkit-filter: blur(2px);
+                top: -6px;
+                bottom: -6px;
+                width: 20px;
+                right: -9px;
+            }
         }
 
         @media screen and (max-width: $breakpoint768) {
             padding: 0 $containerMobilePadding 32px !important;
+
         }
     }
 }
@@ -165,34 +169,4 @@
         object-fit: cover;
         object-position: center;
     }
-}
-
-
-
-.mfp-figure:after {
-    border-radius: 12px;
-}
-
-.mfp-counter {
-    display: flex;
-    justify-content: center;
-    width: 100%;
-    margin-top: 8px;
-}
-
-.mfp-zoom-out-cur {
-    cursor: pointer;
-}
-.mfp-zoom-out-cur .mfp-image-holder .mfp-close {
-    position: fixed;
-    top: 44px;
-    right: 44px;
-    font-size: 50px;
-    transition: all 180ms ease-out;
-    cursor: pointer !important;
-}
-
-img.mfp-img {
-    width: 400px !important;
-    max-height: unset !important;
 }
